# AI

./: .gitignore  CMakeLists.txt  README.md
NLP/: CMakeLists.txt  Makefile  NLP.cbp  cmake_install.cmake
NLP/include/: AI_Types.h  word2vec.h
NLP/src/: word2vec.cpp
Optimizers/: CMakeLists.txt  Makefile  Optimizers.cbp  cmake_install.cmake
Optimizers/include/: AugLagragian.h  BFGS.h  BackTrackingLine.h  GradientDescent.h  IOptimizer.h  NewtonMethod.h  OptStatistics.h
Optimizers/src/: AugLagragian.cpp  BFGS.cpp  BackTrackingLine.cpp  GradientDescent.cpp  IOptimizer.cpp  NewtonMethod.cpp  OptStatistics.cpp  main.cpp
RBM/: CMakeLists.txt  Makefile  RBM.cbp  cmake_install.cmake
RBM/include/: Graph.h
RBM/src/: Graph.cpp
include/: AI_Types.h
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  tests.cbp
tests/src/: main.cpp
